syntax = "proto3";

option optimize_for = SPEED;
option csharp_namespace = "TeamNote.Protocol";

message ConfigRequest {
	int32 Port = 1;
	uint32 ServiceNumber = 2;
}